Kubernetes/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-app-ingress
  namespace: todo-app
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/scheme: internet-facing
spec:
  ingressClassName: nginx
  rules:
  - host: your-domain.com
    http:
      paths:
      - path: /api/todos
        pathType: Prefix
        backend:
          service:
            name: express-backend
            port:
              number: 5000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vite-frontend
            port:
              number: 5173
